[package]
name = "xword_tracker"
version = "0.1.0"
authors = ["elmer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
headless_chrome = { version = "0.9.0", default-features = false }
yaml-rust = "0.4.4"
failure = "0.1.8"
rusqlite = "0.23.1"
chrono = "0.4"
time = "0.2.16"