[package]
name = "xword_tracker"
version = "0.1.0"
authors = ["elmer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
yaml-rust = "0.4.4"
failure = "0.1.8"
rusqlite = "0.23.1"
chrono = "0.4"
time = "0.2.16"
futures = "0.3.5"
serde = { version = "1.0.115", features = ["derive"] }
async-std = "1.6.2"
env_logger = "0.7.1"
log = "0.4.11"
anyhow = "1.0.32"
thiserror = "1.0.20"
